// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TOS Modal is hidden when isVisible is false 1`] = `<div />`;

exports[`TOS Modal shows welcome message for new users 1`] = `
<div>
  <span>
    <div
      style="z-index: 1050; position: fixed; width: 100%; top: 50%; left: 50%;"
      class="terms-of-service-modal max-modal"
    >
      <div
        tabindex="-1"
        style="margin: 0px; background-color: white;"
      >
        <div
          class="tos-modal-container"
        >
          <h1>
            Terms of Service and Privacy Policy
          </h1>
          <h3>
            Welcome to Semester.ly! Please take a look at our Terms of Service and Privacy Policy before getting started:
          </h3>
          <div>
            <a
              href="/termsofservice"
              target="_blank"
              rel="noopener noreferrer"
              class="legal-links"
            >
              Terms of Service
              <i
                class="fa fa-external-link"
              />
            </a>
            <a
              href="/privacypolicy"
              target="_blank"
              rel="noopener noreferrer"
              class="legal-links"
            >
              Privacy Policy
              <i
                class="fa fa-external-link"
              />
            </a>
          </div>
          <button
            class="accept-tos-btn"
          >
            <i
              class="fa fa-check"
            />
            <span>
              I accept the Terms of Service
            </span>
          </button>
          <p
            class="method-details"
          >
            You must accept the new Terms of Service to continue using Semester.ly.
          </p>
        </div>
      </div>
    </div>
    <div
      style="position: fixed; top: 0px; right: 0px; bottom: 0px; left: 0px; z-index: 1040; background-color: rgb(55, 58, 71);"
    />
  </span>
</div>
`;

exports[`TOS Modal shows when isVisible is true 1`] = `
<div>
  <span>
    <div
      style="z-index: 1050; position: fixed; width: 100%; top: 50%; left: 50%;"
      class="terms-of-service-modal max-modal"
    >
      <div
        tabindex="-1"
        style="margin: 0px; background-color: white;"
      >
        <div
          class="tos-modal-container"
        >
          <h1>
            Terms of Service and Privacy Policy
          </h1>
          <h3>
            Our Terms of Service and Privacy Policy have been updated. Please review them here:
          </h3>
          <div>
            <a
              href="/termsofservice"
              target="_blank"
              rel="noopener noreferrer"
              class="legal-links"
            >
              Terms of Service
              <i
                class="fa fa-external-link"
              />
            </a>
            <a
              href="/privacypolicy"
              target="_blank"
              rel="noopener noreferrer"
              class="legal-links"
            >
              Privacy Policy
              <i
                class="fa fa-external-link"
              />
            </a>
          </div>
          <button
            class="accept-tos-btn"
          >
            <i
              class="fa fa-check"
            />
            <span>
              I accept the Terms of Service
            </span>
          </button>
          <p
            class="method-details"
          >
            You must accept the new Terms of Service to continue using Semester.ly.
          </p>
        </div>
      </div>
    </div>
    <div
      style="position: fixed; top: 0px; right: 0px; bottom: 0px; left: 0px; z-index: 1040; background-color: rgb(55, 58, 71);"
    />
  </span>
</div>
`;
